Add GTKMM implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.16.0 FATAL_ERROR)
 option(CANFORM_BUILD_SHARED "Build shared library" ${BUILD_SHARED_LIBS})
 option(CANFORM_BUILD_TEST "Build test" ON)
 option(CANFORM_BUILD_WX "Build wxWidgets version" OFF)
-option(CANFORM_BUILD_GTK "Build GTK version" ON)
+option(CANFORM_BUILD_GTKMM "Build GTK version" ON)
 
 project(CANFORM
 	VERSION 1.0.0
@@ -54,31 +54,31 @@ else()
 				canform_wx)
 		endif()
 	endif()
-	if(CANFORM_BUILD_GTK)
+	if(CANFORM_BUILD_GTKMM)
 		find_package(PkgConfig REQUIRED)
-		pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
+		pkg_check_modules(GTKMM REQUIRED gtkmm-3.0)
 
-		add_library(canform_gtk ${CANFORM_TYPE}
-			src/gtk/gtk.cpp
-			src/gtk/render.cpp)
+		add_library(canform_gtkmm ${CANFORM_TYPE}
+			src/gtkmm/gtkmm.cpp
+			src/gtkmm/render.cpp)
 
-		target_include_directories(canform_gtk PRIVATE
+		target_include_directories(canform_gtkmm PRIVATE
 			include
-			${GTK3_INCLUDE_DIRS})
+			${GTKMM_INCLUDE_DIRS})
 
-		target_link_libraries(canform_gtk PRIVATE ${GTK3_LIBRARIES})
+		target_link_libraries(canform_gtkmm PRIVATE ${GTKMM_LIBRARIES})
 
 		if(CANFORM_BUILD_TEST)
-			add_executable(canform_gtk_test src/tests/gtk/test.cpp)
+			add_executable(canform_gtkmm_test src/tests/gtkmm/test.cpp)
 
-			target_include_directories(canform_gtk_test PRIVATE
+			target_include_directories(canform_gtkmm_test PRIVATE
 				include
-				${GTK3_INCLUDE_DIRS})
+				${GTKMM_INCLUDE_DIRS})
 
-			target_link_libraries(canform_gtk_test PRIVATE
-				${GTK3_LIBRARIES}
+			target_link_libraries(canform_gtkmm_test PRIVATE
+				${GTKMM_LIBRARIES}
 				canform
-				canform_gtk)
+				canform_gtkmm)
 		endif()
 	endif()
 endif()
