--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,7 @@ else()
 		endif()
 	endif()
 	if(CANFORM_BUILD_GTKMM)
+		add_compile_definitions(CANFORM_COLOR_FLOAT=1)
 		find_package(PkgConfig REQUIRED)
 		pkg_check_modules(GTKMM REQUIRED gtkmm-3.0)
 
