--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,7 @@ if(EMSCRIPTEN)
 		target_link_options(canform_em_test PRIVATE
 			"-sEXPORTED_RUNTIME_METHODS=ccall,cwrap,stringToNewUTF8")
 		target_link_options(canform_em_test PRIVATE
-			"-sEXPORTED_FUNCTIONS=_main,_updateBoolean,_updateString,_updateSortableList,_updateMultiForm")
+			"-sEXPORTED_FUNCTIONS=_main,_updateBoolean,_updateString,_updateSortableList,_updateMultiForm,_updateHandler,_cancelHandler")
 	endif()
 else()
 	find_package(PkgConfig REQUIRED)
@@ -71,7 +71,7 @@ else()
 
 	if(CANFORM_BUILD_TEST)
 		set(CANFORM_GTKMM_SOURCES
-			src/tests/gtkmm/test.cpp
+			src/tests/gtkmm/main.cpp
 			src/tests/test.cpp)
 
 		if(WIN32)
